--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,11 +1,11 @@
 .container-header {
-  height: 100px;
-  border-bottom: solid 1px black;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid black;
 }
 
 .container-header > h1 {
-  display: block;
-  font-size: 1.8rem;
+  width: 100%;
   text-align: center;
-  margin-top: 20px;
 }
