--- a/src/components/pages/Home/styles.css
+++ b/src/components/pages/Home/styles.css
@@ -1,15 +1,13 @@
 .container-home {
-  height: 500px;
   display: flex;
-  align-items: center;
-}
-
-.container-header {
-  position: relative;
-  top: -200px;
-  width: 100%;
 }
 
 .container-aside {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 50px;
 }
 
+.container-header {
+}
