--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,11 +1,14 @@
 .container-header {
   flex: 1;
   display: flex;
+  height: 20%;
   align-items: center;
   border-bottom: 1px solid black;
 }
 
 .container-header > h1 {
   width: 100%;
+  align-content: center;
   text-align: center;
+  font-size: 1.6rem;
 }
