--- a/src/components/EventItem/styles.css
+++ b/src/components/EventItem/styles.css
@@ -5,4 +5,19 @@
   margin: 20px;
   text-align: center;
   font-size: 1.1rem;
+  border-radius: 10px;
+}
+
+.eventItem-button {
+  margin-top: 15px;
+  border-radius: 8px;
+  outline-style: none;
+  border: none;
+  padding: 5px;
+  background-color: ghostwhite;
+  transition: background-color 0.2s ease-in;
+}
+
+.eventItem-button:hover {
+  background-color: #FF6666;
 }
