--- a/src/components/pages/Home/styles.css
+++ b/src/components/pages/Home/styles.css
@@ -1,11 +1,7 @@
-#root {
-  height: 100vh;
-  width: 100vw;
-}
-
 .container-menu {
   display: flex;
   height: 100%;
+  border-right: 1px solid black;
 }
 
 .container-aside {
@@ -19,7 +15,7 @@
 .container-content {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  flex: 1;
  }
 
  .container-header {
@@ -36,6 +32,7 @@
 
  .container-eventList {
   align-content: flex-start;
+  justify-content: space-evenly;
 }
 
 .container-eventLoading {
