--- a/src/components/pages/Login/styles.css
+++ b/src/components/pages/Login/styles.css
@@ -1,19 +1,20 @@
 .container-login {
   display: flex;
   flex: 1;
-  height: inherit;
-  align-items: center;
   justify-content: center;
   font-family: Arial;
+  height: 100vh;
+  align-items: center;
 }
 
 .container-auth {
+  border-radius: 15px;
+  border: 2px solid black;
   display: flex;
   flex-direction: column;
-  border: 2px solid black;
-  border-radius: 15px;
   padding: 25px;
   text-align: center;
+  height: max-content;
 }
 
 @media only screen and (max-width: 500px) {
