Cleaning CSS, adding new button style to aside menu and change font size on screen width with 1440px or more

--- a/src/components/EventList/styles.css
+++ b/src/components/EventList/styles.css
@@ -1,9 +1,4 @@
-@media screen and (min-width: 1440px) {
-  body {
-    font-size: 5rem;
-  }
-  
-  .container-eventList {
-
-  }
+.container-eventList img {
+  width: 50px;
+  height: 50px;
 }
