--- a/src/components/EventItem/styles.css
+++ b/src/components/EventItem/styles.css
@@ -1,20 +1,20 @@
 .container-eventItem {
   border: 1px solid black;
+  border-radius: 10px;
   height: max-content;
   padding: 10px;
   margin: 20px;
   text-align: center;
-  font-size: 1.1rem;
-  border-radius: 10px;
 }
 
 .eventItem-button {
-  margin-top: 15px;
-  border-radius: 8px;
-  outline-style: none;
-  border: none;
-  padding: 5px;
   background-color: ghostwhite;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  margin-top: 15px;
+  outline-style: none;
+  padding: 5px;
   transition: background-color 0.2s ease-in;
 }
 
