--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,14 +1,14 @@
 .container-header {
-  flex: 1;
-  display: flex;
-  height: 20%;
   align-items: center;
   border-bottom: 1px solid black;
+  display: flex;
+  flex: 1;
+  height: 20%;
 }
 
 .container-header > h1 {
-  flex: 1;
   align-content: center;
+  flex: 1;
+  font-size: 150%;
   text-align: center;
-  font-size: 1.6rem;
 }
