--- a/src/components/pages/Login/styles.css
+++ b/src/components/pages/Login/styles.css
@@ -1,20 +1,20 @@
 .container-login {
+  align-items: center;
   display: flex;
   flex: 1;
-  justify-content: center;
   font-family: Arial;
+  justify-content: center;
   height: 100vh;
-  align-items: center;
 }
 
 .container-auth {
   border-radius: 15px;
   border: 2px solid black;
   display: flex;
+  height: max-content;
   flex-direction: column;
   padding: 25px;
   text-align: center;
-  height: max-content;
 }
 
 @media only screen and (max-width: 500px) {
@@ -37,12 +37,18 @@
 }
 
 .button-login {
-  width: 8rem;
-  height: 3rem;
   align-self: center;
+  cursor: pointer;
+  height: 3rem;
+  width: 8rem;
+  transition: background-color 0.2s ease-in;
+}
+
+.button-login:hover {
+  background-color: #FF6666;
 }
 
 .h1-login {
-  margin-bottom: 20px;
   font-size: 25px;
+  margin-bottom: 20px;
 }
