--- a/src/global.css
+++ b/src/global.css
@@ -9,7 +9,19 @@ body {
   width: 100vw;
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1440px) {  
+  .container-header > h1 {
+    font-size: 200%;
+  }
+
+  .container-eventList {
+    font-size: 130%;
+  }
+
+  .container-aside > a {
+    font-size: 150%;
+  }
+  
   #root {
     width: 50vw;
   }
